Revert "Revert "Merge branch 'feature/SW-244-instant-job-time-estimation' into feature/SW-990-create-and-test-a-feature-branch-including-the-attached-tickets""
This reverts commit 97c4f3c7b6f17694cca74b2d739e5290e7790fd4.

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -386,10 +386,10 @@
                                                 {{ _('Clusters are processed successively and each cluster is processed line by line.') }}
                                                 {{ _('This option reduces \'empty rides\' moderately and <b>gives the best precision</b>.') }}
                                         </li>
-<!--									    <li><b>{{ _('Fast:') }}</b>
+									    <li><b>{{ _('Fast:') }}</b>
                                                 {{ _('Aggressive clustering also of smaller objects to reduce \'empty rides\' as much as possible.') }}
 									            {{ _('The higher speed might compromise the precision of some engravings, but <b>works well with text or clip-art design.</b>') }}
-									    </li>-->
+									    </li>
 									    <li><b>{{ _('Basic:') }}</b>
                                                 {{ _('No clustering at all, the engravings are processed line by line. In this mode the laserhead may have a lot of \'empty rides\' making it slower, but the precision is not compromised.') }}
                                                 {{ _('<b>Use this option as fallback</b> if you\'re experiencing issues with the other options.') }}</li>
@@ -402,15 +402,12 @@
                                              data-toggle="buttons-radio">
                                             <button type="button" value="precise"
                                                     id="parameter_assignment_engraving_mode_precise_btn"
-                                                    data-bind="event: {click: updateEngravingMode}"
                                                     class="btn btn-default active">{{ _('Recommended') }}</button>
                                             <button type="button" value="fast"
                                                     id="parameter_assignment_engraving_mode_fast_btn"
-                                                    data-bind="event: {click: updateEngravingMode}"
                                                     class="btn btn-default">{{ _('Fast') }}</button>
                                             <button type="button" value="basic"
                                                     id="parameter_assignment_engraving_mode_basic_btn"
-                                                    data-bind="event: {click: updateEngravingMode}"
                                                     class="btn btn-default">{{ _('Basic') }}</button>
                                         </div>
                                     </div>
@@ -520,7 +517,7 @@
 									    {{ _('The effect in general is dependent from the material and its color and surface.') }}">
                                     <label class="control-label">{{ _('Speed') }}</label>
                                     <div class="controls"><input class="param_feedrate speed_input" type="number"
-                                                                 data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
+                                                                 data-bind="event: {change: flag_customized_material}"
                                                                  onblur="window.mrbeam.colorDragging.checkConversionParameters()"/>&nbsp;{{ _('mm/min') }}
                                     </div>
                                 </div>
@@ -555,14 +552,12 @@
                                             </li></ul>">
                                     <label class="control-label">{{ _('Passes') }}</label>
                                     <div class="controls">
-                                        <input
-                                            data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
-                                            class="param_passes passes_input cut_passes_input" type="number"/>&nbsp;&times;&nbsp;&nbsp;
+                                        <input data-bind="event: {change: flag_customized_material}"
+                                               class="param_passes passes_input cut_passes_input" type="number"/>&nbsp;&times;&nbsp;&nbsp;
                                         <span style="display: inline-block">
                                             <label data-bind="visible: showExpertSettings">
-                                                <input
-                                                    data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
-                                                    type="checkbox" class="param_progressive"/>
+                                                <input data-bind="event: {change: flag_customized_material}"
+                                                       type="checkbox" class="param_progressive"/>
                                                 {{ _('progressive') }}
                                             </label>
                                         </span>
@@ -577,10 +572,9 @@
                                          {{ _('If you experience that the laser does not cut or engrave first few millimeters of each new line or shape, try to set a pierce time.') }}
                                          <i>{{ _('Try 100ms and adjust if needed.') }}</i>">
                                     <label class="control-label">{{ _('Pierce time') }}</label>
-                                    <div class="controls"><input
-                                                            data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
-                                                            class="param_piercetime pierce_time_input"
-                                                            type="number"/>&nbsp;{{ _('ms') }}</div>
+                                    <div class="controls"><input data-bind="event: {change: flag_customized_material}"
+                                                                 class="param_piercetime pierce_time_input"
+                                                                 type="number"/>&nbsp;{{ _('ms') }}</div>
                                 </div>
                             </div>
                         </form>
@@ -609,34 +603,12 @@
             <div class="bar" style="width: 0%" data-bind="style: {width: slicing_progress() + '%'} "></div>
         </div>
     </div>
-    <div style="position: relative; height: 0;">
-        <div id="jobTimeEstimationCard">
-            <a href="#" class="dropdown collapsed" data-toggle="collapse" data-target="#job_time_estimation_detailed">
-                <i class="icon-time"></i>
-                <span>{{ _('Estimation:') }} <span data-bind="text: estimated_job_time().humanReadable"></span></span>
-                <b class="caret"></b>
-            </a>
-            <br/>
-            <a href="#" data-toggle="collapse" data-target="#job_time_estimation_detailed" style="color: inherit; text-decoration: none;">
-                <div id="job_time_estimation_detailed" class="collapse" >
-                    <ul data-bind="foreach: estimated_job_time().detailed_list">
-                        <li>
-                            <div class="icon" data-bind="style: {backgroundImage: 'url('+$data.img+')', backgroundColor: $data.bgr}"></div>
-                            <label data-bind="text: $data.label"></label>:
-                            <span class="duration" data-bind="text: $data.duration"></span>
-                        </li>
-                    </ul>
-                </div>
-            </a>
-        </div>
-    </div>
     <div class="modal-footer">
         <div class="pull-left" style="text-align:left;" data-bind="visible: !slicing_in_progress()">
             <label class="checkbox">
                 <input type="checkbox" id="parameter_assignment_show_advanced_settings_cb"
                        data-bind="checked: showExpertSettings">{{ _('show advanced settings') }}
             </label>
-
         </div>
 
         <a href="#" class="btn" aria-hidden="true"
