--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -606,6 +606,27 @@
             <div class="bar" style="width: 0%" data-bind="style: {width: slicing_progress() + '%'} "></div>
         </div>
     </div>
+    <div style="position: relative; height: 0;">
+        <div id="jobTimeEstimationCard">
+            <a href="#" class="dropdown collapsed" data-toggle="collapse" data-target="#job_time_estimation_detailed">
+                <i class="icon-time"></i>
+                <span>{{ _('Estimation:') }} <span data-bind="text: estimated_job_time().humanReadable"></span></span>
+                <b class="caret"></b>
+            </a>
+            <br/>
+            <a href="#" data-toggle="collapse" data-target="#job_time_estimation_detailed" style="color: inherit; text-decoration: none;">
+                <div id="job_time_estimation_detailed" class="collapse" >
+                    <ul data-bind="foreach: estimated_job_time().detailed_list">
+                        <li>
+                            <div class="icon" data-bind="style: {backgroundImage: 'url('+$data.img+')', backgroundColor: $data.bgr}"></div>
+                            <label data-bind="text: $data.label"></label>:
+                            <span class="duration" data-bind="text: $data.duration"></span>
+                        </li>
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
     <div class="modal-footer">
         <div class="pull-left" style="text-align:left;" data-bind="visible: !slicing_in_progress()">
             <label class="checkbox">
