SW-244 Add job time estimation recalculation check-points

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -520,7 +520,7 @@
 									    {{ _('The effect in general is dependent from the material and its color and surface.') }}">
                                     <label class="control-label">{{ _('Speed') }}</label>
                                     <div class="controls"><input class="param_feedrate speed_input" type="number"
-                                                                 data-bind="event: {change: flag_customized_material}"
+                                                                 data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
                                                                  onblur="window.mrbeam.colorDragging.checkConversionParameters()"/>&nbsp;{{ _('mm/min') }}
                                     </div>
                                 </div>
@@ -555,12 +555,14 @@
                                             </li></ul>">
                                     <label class="control-label">{{ _('Passes') }}</label>
                                     <div class="controls">
-                                        <input data-bind="event: {change: flag_customized_material}"
-                                               class="param_passes passes_input cut_passes_input" type="number"/>&nbsp;&times;&nbsp;&nbsp;
+                                        <input
+                                            data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
+                                            class="param_passes passes_input cut_passes_input" type="number"/>&nbsp;&times;&nbsp;&nbsp;
                                         <span style="display: inline-block">
                                             <label data-bind="visible: showExpertSettings">
-                                                <input data-bind="event: {change: flag_customized_material}"
-                                                       type="checkbox" class="param_progressive"/>
+                                                <input
+                                                    data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
+                                                    type="checkbox" class="param_progressive"/>
                                                 {{ _('progressive') }}
                                             </label>
                                         </span>
@@ -575,9 +577,10 @@
                                          {{ _('If you experience that the laser does not cut or engrave first few millimeters of each new line or shape, try to set a pierce time.') }}
                                          <i>{{ _('Try 100ms and adjust if needed.') }}</i>">
                                     <label class="control-label">{{ _('Pierce time') }}</label>
-                                    <div class="controls"><input data-bind="event: {change: flag_customized_material}"
-                                                                 class="param_piercetime pierce_time_input"
-                                                                 type="number"/>&nbsp;{{ _('ms') }}</div>
+                                    <div class="controls"><input
+                                                            data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
+                                                            class="param_piercetime pierce_time_input"
+                                                            type="number"/>&nbsp;{{ _('ms') }}</div>
                                 </div>
                             </div>
                         </form>
