SW-356 add an vector outline to the quicktext to support cutting letters revamped (#1474)
* SW-356 Optimize the appearance of the job time estimation card
* SW-356 Add QuickText vector outline display and styling
* SW-356 Add QuickText vector outline logic
* SW-356 Format code
* SW-356 Add, modify, and remove logging
* SW-356 Modify and remove commented and unused code lines
* SW-356 Add TODOs
* SW-356 Optimize code quality
* SW-356 Revert faulty path optimisation and add TODO

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -333,12 +333,6 @@
                                         </div>
                                     </div>
                                 </div>
-
-                                <!--<div class="controls" data-bind="visible: showExpertSettings ">
-									<label class="checkbox">
-										<input type="checkbox" data-bind="checked: engrave_outlines">{{ _('engrave outlines of filled shapes') }}
-									</label>
-								</div>-->
                             </div>
 
                             <div class="control-group" data-bind="visible: showExpertSettings ">
@@ -610,7 +604,7 @@
         </div>
     </div>
     <div style="position: relative; height: 0;">
-        <div id="jobTimeEstimationCard">
+        <div id="jobTimeEstimationCard" data-bind="visible: showJobTimeEstimation()">
             <a href="#" class="dropdown collapsed" data-toggle="collapse" data-target="#job_time_estimation_detailed">
                 <i class="icon-time"></i>
                 <span>{{ _('Estimation:') }} <span data-bind="text: estimated_job_time().humanReadable"></span></span>
