--- a/octoprint_mrbeam/templates/quick_shape.jinja2
+++ b/octoprint_mrbeam/templates/quick_shape.jinja2
@@ -18,14 +18,14 @@
 						<div class="control-group">
 							<label class="control-label"><i class="icon icon-resize-horizontal"></i></label>
 							<div class="controls">
-								<input type="number" id="quick_shape_rect_w" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaWidthMM}">
+								<input type="number" id="quick_shape_rect_w" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: rectangleMaxWidth}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
 						<div class="control-group">
 							<label class="control-label"><i class="icon icon-resize-vertical"></i></label>
 							<div class="controls">
-								<input type="number" id="quick_shape_rect_h" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaHeightMM}">
+								<input type="number" id="quick_shape_rect_h" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: rectangleMaxHeight}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
@@ -49,7 +49,7 @@
 						<div class="control-group">
 							<label class="control-label"><i class="icon"></i>Ø</label>
 							<div class="controls">
-								<input type="number" id="quick_shape_circle_radius" min="0.1" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaHeightMM}">
+								<input type="number" id="quick_shape_circle_radius" min="0.1" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: circleMaxRadius}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
@@ -60,7 +60,7 @@
 						<div class="control-group">
 							<label class="control-label"><i class="icon"></i>Ø</label>
 							<div class="controls">
-								<input type="number" id="quick_shape_star_radius" class="input-block" min="0.0" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaHeightMM}">
+								<input type="number" id="quick_shape_star_radius" class="input-block" min="0.0" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: starMaxRadius}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
@@ -84,14 +84,14 @@
 						<div class="control-group">
 							<label class="control-label"><i class="icon icon-resize-horizontal"></i></label>
 							<div class="controls">
-								<input type="number" id="quick_shape_heart_w" class="input-block" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaWidthMM}">
+								<input type="number" id="quick_shape_heart_w" class="input-block" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: heartMaxWidth}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
 						<div class="control-group">
 							<label class="control-label"><i class="icon icon-resize-vertical"></i></label>
 							<div class="controls">
-								<input type="number" id="quick_shape_heart_h" class="input-block" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaHeightMM}">
+								<input type="number" id="quick_shape_heart_h" class="input-block" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: heartMaxHeight}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
