--- a/octoprint_mrbeam/templates/quick_shape.jinja2
+++ b/octoprint_mrbeam/templates/quick_shape.jinja2
@@ -7,6 +7,7 @@
 		<div class="tabbable">
 			<ul id="shape_tabs" class="nav nav-tabs">
 				<li class="active"><a id="shape_tab_link_rect" href="#rect" data-bind="click: function(){switchQuickShape('#rect')}" data-toggle="tab"><i class="icon icon-check-empty"></i></a></li>
+				<li><a id="shape_tab_link_line" href="#line" data-bind="click: function(){switchQuickShape('#line')}" data-toggle="tab"><i class="icon icon-minus"></i></a></li>
 				<li><a id="shape_tab_link_circle" href="#circle" data-bind="click: function(){switchQuickShape('#circle')}" data-toggle="tab"><i class="icon icon-circle-blank"></i></a></li>
 				<li><a id="shape_tab_link_star" href="#star" data-bind="click: function(){switchQuickShape('#star')}" data-toggle="tab"><i class="icon icon-star-empty"></i></a></li>
 				<li><a id="shape_tab_link_heart" href="#heart" data-bind="click: function(){switchQuickShape('#heart')}" data-toggle="tab"><i class="icon icon-heart-empty"></i></a></li>
@@ -42,6 +43,17 @@
 						</div>
 
 
+					</form>
+				</div>
+				<div class="tab-pane" id="line">
+					<form role="form" class="form-horizontal" data-bind="submit: _qs_dialogClose">
+						<div class="control-group">
+							<label class="control-label"><i class="icon icon-resize-horizontal"></i></label>
+							<div class="controls">
+								<input type="number" id="quick_shape_line_length" min="1" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: lineMaxLength}">
+                                <span style="display:inline-block">mm</span>
+							</div>
+						</div>
 					</form>
 				</div>
 				<div class="tab-pane" id="circle">
