--- a/octoprint_mrbeam/templates/quick_shape.jinja2
+++ b/octoprint_mrbeam/templates/quick_shape.jinja2
@@ -7,6 +7,7 @@
 		<div class="tabbable">
 			<ul id="shape_tabs" class="nav nav-tabs">
 				<li class="active"><a id="shape_tab_link_rect" href="#rect" data-bind="click: function(){switchQuickShape('#rect')}" data-toggle="tab"><i class="icon icon-check-empty"></i></a></li>
+				<li><a id="shape_tab_link_line" href="#line" data-bind="click: function(){switchQuickShape('#line')}" data-toggle="tab"><i class="icon icon-minus"></i></a></li>
 				<li><a id="shape_tab_link_circle" href="#circle" data-bind="click: function(){switchQuickShape('#circle')}" data-toggle="tab"><i class="icon icon-circle-blank"></i></a></li>
 				<li><a id="shape_tab_link_star" href="#star" data-bind="click: function(){switchQuickShape('#star')}" data-toggle="tab"><i class="icon icon-star-empty"></i></a></li>
 				<li><a id="shape_tab_link_heart" href="#heart" data-bind="click: function(){switchQuickShape('#heart')}" data-toggle="tab"><i class="icon icon-heart-empty"></i></a></li>
@@ -18,14 +19,14 @@
 						<div class="control-group">
 							<label class="control-label"><i class="icon icon-resize-horizontal"></i></label>
 							<div class="controls">
-								<input type="number" id="quick_shape_rect_w" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaWidthMM}">
+								<input type="number" id="quick_shape_rect_w" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: rectangleMaxWidth}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
 						<div class="control-group">
 							<label class="control-label"><i class="icon icon-resize-vertical"></i></label>
 							<div class="controls">
-								<input type="number" id="quick_shape_rect_h" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaHeightMM}">
+								<input type="number" id="quick_shape_rect_h" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: rectangleMaxHeight}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
@@ -33,8 +34,6 @@
 							<label class="control-label">{{ _('Corners') }}</label>
 							<div class="controls">
 								<!--<label class="control-label"><i class="icon icon-check-empty"></i></label>-->
-{#								<input id="quick_shape_rect_radius" class="precisionslider padding-top" type="range" value="0" min="0" max="100"#}
-{#									   data-bind="textInput: _qs_currentQuickShapeUpdate()" />#}
                                 <input id="quick_shape_rect_radius" class="mrb_slider" type="range" value="0" min="0" max="100"
 									   data-bind="textInput: _qs_currentQuickShapeUpdate()" />
 								<!--<label class="control-label"><i class="icon icon-circle-blank"></i></label>-->
@@ -44,12 +43,23 @@
 
 					</form>
 				</div>
+				<div class="tab-pane" id="line">
+					<form role="form" class="form-horizontal" data-bind="submit: _qs_dialogClose">
+						<div class="control-group">
+							<label class="control-label"><i class="icon icon-resize-horizontal"></i></label>
+							<div class="controls">
+								<input type="number" id="quick_shape_line_length" min="1" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: lineMaxLength}">
+                                <span style="display:inline-block">mm</span>
+							</div>
+						</div>
+					</form>
+				</div>
 				<div class="tab-pane" id="circle">
 					<form role="form" class="form-horizontal" data-bind="submit: _qs_dialogClose">
 						<div class="control-group">
 							<label class="control-label"><i class="icon"></i>Ø</label>
 							<div class="controls">
-								<input type="number" id="quick_shape_circle_radius" min="0.1" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaHeightMM}">
+								<input type="number" id="quick_shape_circle_radius" min="0.1" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: circleMaxRadius}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
@@ -60,7 +70,7 @@
 						<div class="control-group">
 							<label class="control-label"><i class="icon"></i>Ø</label>
 							<div class="controls">
-								<input type="number" id="quick_shape_star_radius" class="input-block" min="0.0" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaHeightMM}">
+								<input type="number" id="quick_shape_star_radius" class="input-block" min="0.0" step="0.1" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: starMaxRadius}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
@@ -84,14 +94,14 @@
 						<div class="control-group">
 							<label class="control-label"><i class="icon icon-resize-horizontal"></i></label>
 							<div class="controls">
-								<input type="number" id="quick_shape_heart_w" class="input-block" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaWidthMM}">
+								<input type="number" id="quick_shape_heart_w" class="input-block" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: heartMaxWidth}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
 						<div class="control-group">
 							<label class="control-label"><i class="icon icon-resize-vertical"></i></label>
 							<div class="controls">
-								<input type="number" id="quick_shape_heart_h" class="input-block" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: workingAreaHeightMM}">
+								<input type="number" id="quick_shape_heart_h" class="input-block" min="0" data-bind="textInput: _qs_currentQuickShapeUpdate(), attr:{max: heartMaxHeight}">
                                 <span style="display:inline-block">mm</span>
 							</div>
 						</div>
