SW-990 create a feature branch including the attached tickets (#1481)
* SW-244 instant job time estimation revamped (#1473)

* SW-356 add an vector outline to the quicktext to support cutting letters revamped (#1474)

* SW-289 Drag the laser head cursor in the WorkingArea & Quick Shape "Line" - revamped (#1479)

* SW-890 svg embedded images are misaligned revamped (#1480)

* SW-1155 gcode files created via pixel based images sv gs engrave some parts more than once

--- a/octoprint_mrbeam/static/css/tab_workingarea.css
+++ b/octoprint_mrbeam/static/css/tab_workingarea.css
@@ -31,7 +31,7 @@ svg#area_preview {
   top: 0.3em;
 }
 
-svg text {
+svg#area_preview text {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -39,14 +39,14 @@ svg text {
   pointer-events: none;
 }
 
-svg circle.ft_handle {
+svg#area_preview circle.ft_handle {
   fill-opacity: 0.7;
   stroke: #ff0000;
   stroke-width: 2.5px;
   fill: #fff;
   vector-effect: non-scaling-stroke;
 }
-svg rect.ft_bbox_transformed {
+svg#area_preview rect.ft_bbox_transformed {
   stroke: #ff0000;
   stroke-width: 2.5px;
   vector-effect: non-scaling-stroke;
@@ -56,10 +56,22 @@ svg rect.ft_bbox_transformed {
   fill: #999;
 }
 
-svg .vector_outline {
+svg#area_preview .vector_outline {
   vector-effect: non-scaling-stroke;
   stroke-width: 0.8;
+  /*cursor: pointer;*/
+}
+
+svg#area_preview .userSVG,
+svg#area_preview .userIMG,
+svg#area_preview .userText {
   cursor: pointer;
+}
+
+body.ctrlKey svg#area_preview.mbtransformActive .userSVG,
+body.ctrlKey svg#area_preview.mbtransformActive .userIMG,
+body.ctrlKey svg#area_preview.mbtransformActive .userText {
+  cursor: copy;
 }
 
 .userSVG.designHighlight .vector_outline {
@@ -111,6 +123,10 @@ g#camera_markers.markerSW.gray circle#markerSW {
   opacity: 0.6;
   animation: none;
   pointer-events: auto;
+}
+
+svg#area_preview #userContent .hideWhileRastering {
+  opacity: 0;
 }
 
 @keyframes blinker {
@@ -203,7 +219,7 @@ g#camera_markers.markerSW.gray circle#markerSW {
   font-size: 0.8rem;
 }
 #wa_filelist .detail_information input {
-  width: calc(30% - 1em);
+  width: calc(30% - 1.5em);
   box-sizing: border-box;
   padding-left: 0.2em;
   padding-top: 0;
@@ -502,10 +518,9 @@ input.decent_input:hover {
 /*Laser button */
 
 /* Quick text */
-#quick_text_dialog_intensity {
-  margin-top: 4em;
+#quick_text_stroke_and_fill {
+  margin-top: 2em;
   margin-bottom: 2em;
-  width: 100%;
 }
 
 #quick_text_dialog #qt_round_text_section img {
@@ -517,13 +532,12 @@ input.decent_input:hover {
   padding-bottom: 0;
 }
 #qt_round_text_section.straight #quick_text_dialog_circle {
-  display: none;
+  visibility: hidden;
 }
 
 #quick_text_dialog_circle {
   width: 60%;
-  margin: 1em;
-  float: right;
+  margin: 2em 0em;
 }
 
 /*Sliders*/
@@ -749,8 +763,10 @@ body.ctrlKey #translateHandle {
   transition-timing-function: linear;
 }
 
+#crosshairDummy path,
+#crosshairDummy circle.dot,
 #crosshair path,
-#crosshair circle {
+#crosshair circle.dot {
   stroke: #e25303;
   stroke-width: 2;
   stroke-linecap: round;
@@ -762,6 +778,26 @@ body.ctrlKey #translateHandle {
   pointer-events: none;
 }
 
+#crosshairDummy path,
+#crosshairDummy circle.dot {
+  stroke: #000000;
+  opacity: 0.5;
+  filter: url(#designHighlight);
+}
+
+#crosshairDummy circle.dragger,
+#crosshair circle.dragger {
+  stroke: none;
+  fill: #000000;
+  opacity: 0;
+  cursor: grab;
+}
+#crosshair:hover circle.dragger {
+  opacity: 0.2;
+}
+#crosshairDummy circle.dragger {
+  cursor: grabbing;
+}
 body.activitySpinnerActive #activitySpinnerOverlay {
   opacity: 1;
   pointer-events: auto;
