SW-1328 the text of the svgs will not be engraved (#1523)
* SW-1328 Hide fast engraving advanced option

* SW-1328 Fix MRBEAM_DEBUG_RENDERING debugging

* SW-1328 Push tspan parent (text) to selection instead of tspan elements

* SW-1328 Mark text elements as filled instead of tspan elements

Tspan elements cannot be rendered alone without a text parent leading to some SVG text combinations to be skipped

* SW-1328 Add SVG styling to all clusters

* SW-1328 Refactor code and attach ticket IDs to the added TODOs

* SW-1328 Fix typo

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -398,10 +398,11 @@
                                                     id="parameter_assignment_engraving_mode_precise_btn"
                                                     data-bind="event: {click: updateEngravingMode}"
                                                     class="btn btn-default active">{{ _('Recommended') }}</button>
-                                            <button type="button" value="fast"
+                                            {# TODO: SW-1447 #}
+                                            {#<button type="button" value="fast"
                                                     id="parameter_assignment_engraving_mode_fast_btn"
                                                     data-bind="event: {click: updateEngravingMode}"
-                                                    class="btn btn-default">{{ _('Fast') }}</button>
+                                                    class="btn btn-default">{{ _('Fast') }}</button>#}
                                             <button type="button" value="basic"
                                                     id="parameter_assignment_engraving_mode_basic_btn"
                                                     data-bind="event: {click: updateEngravingMode}"
