add commands and data-cy to be able to run a brand created docker image

--- a/octoprint_mrbeam/templates/loginscreen_viewmodel.jinja2
+++ b/octoprint_mrbeam/templates/loginscreen_viewmodel.jinja2
@@ -1,4 +1,4 @@
-<div id="loginscreen_dialog" name="loginscreen" class="modal hide fade" data-backdrop="static" data-keyboard="false">
+<div id="loginscreen_dialog" data-cy="loginscreen_dialog" name="loginscreen" class="modal hide fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-header">
         <h3>
             <img loading="lazy" src="/plugin/mrbeam/static/img/mr_x120.png" style="height: 38px; width: auto;">
