Revert "Auto-format all files (no black for now)"
This reverts commit 117f5751b043f8abb627b8af8507b01c070f5440.

--- a/octoprint_mrbeam/static/css/software_update.css
+++ b/octoprint_mrbeam/static/css/software_update.css
@@ -5,6 +5,8 @@
 #settings_plugin_softwareupdate_workingdialog_output .stderr,
 #settings_plugin_softwareupdate_workingdialog_output .call,
 #settings_plugin_softwareupdate_workingdialog_output .stdout,
-#settings_plugin_softwareupdate_workingdialog_output .message {
-  color: #333 !important;
+#settings_plugin_softwareupdate_workingdialog_output .message
+{
+    color: #333 !important;
 }
+
