--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -49,7 +49,7 @@
 
 
 													<div class="row-fluid print-control btn-group" style="display: none;" data-bind="visible: loginState.isUser">
-														<button id="laser_button" t-id=”working-area-laser-button” class="btn btn-danger span6"
+														<button id="laser_button" data-cy=”working-area-laser-button” class="btn btn-danger span6"
                                                                 data-bind="click: conversion.show_conversion_dialog, enable: {{ 'true' if isDevelop and 'enableLaserButton' in request.args else 'false'}} || (state.isOperational() && state.isReady() && !state.isPrinting() && !state.isPaused() && loginState.isUser() && !workingArea.working_area_empty()), attr: {title: state.titlePrintButton}"
                                                                 id="job_print">
                                                             <i class="icon-white icon-fire"
