Hide new job time estimation

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -604,7 +604,7 @@
             <div class="bar" style="width: 0%" data-bind="style: {width: slicing_progress() + '%'} "></div>
         </div>
     </div>
-    <div style="position: relative; height: 0;">
+    <div hidden style="position: relative; height: 0;">
         <div id="jobTimeEstimationCard" data-bind="visible: showJobTimeEstimation()">
             <a href="#" class="dropdown collapsed" data-toggle="collapse" data-target="#job_time_estimation_detailed">
                 <i class="icon-time"></i>
